tests/NormalTests/paczka1/fuzzy1/80789525.err
Error in line 16: jDwMzv1 A244 40,3
Error in line 19: jDwMzv1 A590 50,3
Error in line 22: A796 A590 80,3
Error in line 24: A796 A244 97,1
